# GUI

./: CMakeLists.txt  Readme.txt  classifier_forward.m  classifier_turn.m  forw100runs.mat  manifest.xml  matlab_run.sh  qrc_images.cxx  turn180DataLabel.mat  ui_main_window.h
include/pow_gui/: main_window.hpp  moc_main_window.cxx  moc_qnode.cxx  moc_touch_sim.cxx  qnode.hpp  tabdialog.h  touch_sim.hpp
src/: main.cpp  main_window.cpp  qnode.cpp  touch_sim.cpp
ui/: main_window.ui
